--- a/css/main.css
+++ b/css/main.css
@@ -121,13 +121,13 @@ blockquote footer {
 
 /* Links */
 #main-container a {
-  color: #1585cf;
+  color: #000000;
   font-weight: 500;
 }
 
 #main-container a:hover {
-  color: #1585cf;
-  border-bottom: 1px dashed #1585cf;
+  color: #000000;
+/*   border-bottom: 1px dashed #1585cf; */
   text-decoration: none;
   padding-bottom: 2px;
 }
