--- a/css/main.css
+++ b/css/main.css
@@ -192,7 +192,7 @@ nav {
     vertical-align: bottom;
     -webkit-transform: perspective(1px) translateZ(0);
     transform: perspective(1px) translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    box-shadow: none /*0 0 1px rgba(0, 0, 0, 0); */
     position: relative;
   }
 
